--- a/03-failure-part2.Rmd
+++ b/03-failure-part2.Rmd
@@ -1,10 +1,6 @@
 # The subprime mortgage crisis unfolds in early 2007, part 2
 
-Keywords: refactoring, unsupervised learning, principal component analysis, k-means clustering, correspondence analysis, chi-squared test, contingency table, pivot, correlation table
-
-## Reminder of Flaws to be Corrected
-
-A poor choice of performance indicator or a defective classification function makes the conclusions drawn regarding relationships among the *perf* response variables and the other variables suspect and subject to revision.
+Keywords: logistic regression, unsupervised learning, principal component analysis, k-means clustering, correspondence analysis, chi-squared test, contingency table, pivot, correlation table
 
 ## The fall of FICO
 
@@ -22,59 +18,37 @@ Some of the testing of FICO as a useful metric involved subsetting the data. The
 
 * Longitude and latitude dervived from the ZCTA's, used for mapping
 
-As a compromise, I converted the 5-digit zip codes into 3-digit zip codes. In metropolitan areas, the 3-digit codes are the sizes comparable to how the multiple listing services divide the market. We'll see if there is any value in this proxy measure of real estate market.
+## Logistic regression using locational fields
+
+As a compromise, I converted the 5-digit zip codes into 3-digit zip codes. In metropolitan areas, the 3-digit codes are the sizes comparable to how the multiple listing services divide the market. We'll see if there is any value in this proxy measure of real estate market, using logistic regression (linear regression is inappropriate because zip codes are not continuous).
 
 ```{r setup4A,echo = FALSE, warning=FALSE, message=FALSE}
-# The following lines have been commented out because the results have
-# been captured in a MySQL database
-#library(tidyverse)
-#library(DBI)
-#library(RMySQL)
-#drv <- dbDriver("MySQL")
-#con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
-#res <- dbGetQuery(con, "SELECT ctapeno, deal, remit, fico, dti, cltv, orate, obal, grade, round(zip/100,0), dtype, fpd,ltype, otype, purpose, ptype, metro FROM y6c")
-#cs <- as.tibble(res)
-#require(binaryLogic)
-#require(stringi)
-#reports <- cs %>% rowwise %>% mutate(repbin = toString(as.binary(remit))) %>% rowwise %>% mutate(repstr = str_replace_all(repbin,"[, ]",'')) %>% mutate(reports = str_count(repstr)) %>% select(ctapeno, repstr, reports)
-#perf <- reports %>% mutate(category = case_when(str_detect(repstr, '111$') ~ "C", str_count(repstr, '0') <= 9 ~ "B", str_count(repstr, '0') > 9 ~ "A")) %>% select(ctapeno, category)
-#y6rf <- cs %>% inner_join(perf, by = "ctapeno")
-#y6rf <- y6rf %>% mutate(zip = as.character(`round(zip/100,0)`), perf = category, grade = as.character((grade)))
-#y6rf <- y6rf %>% select(ctapeno, deal,fico,dti,cltv,obal, orate, grade, dtype,fpd,ltype, otype, purpose, ptype, zip, metro, perf)
-#dbWriteTable(con, "loans", y6rf) 
-#test
-#res <- dbGetQuery(con, "SELECT * from loans limit 25") 
-#res
+library(tidyverse)
+library(DBI)
+library(RMySQL)
+library(ggfortify)
+drv <- dbDriver("MySQL")
+con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
+res <- as.tibble(dbGetQuery(con, "SELECT down, round(zip/100,0) FROM y7"))
+colnames(res) <- c("down", "zip3")
+res.mod <- glm(down ~ zip3, data=res)
+autoplot(res.mod)
 ``` 
 
-It was time to reorganize the database into a more streamlined version, that captured the information on performance (relieving the 11-month constraint) and transformed the fields that needed to be treated as categorical, rather than continuous. It's much more efficient to put this in a new SQL table than to keep in memory, especially since sampling will be involved. Here's the revised data layout:
+We continue to bump up against the same problem in the Normal Q-Q plot.
 
-    MariaDB [dlf]> describe loans;
-    +-----------+--------+------+-----+---------+-------+
-    | Field     | Type   | Null | Key | Default | Extra |
-    +-----------+--------+------+-----+---------+-------+
-    | row_names | text   | YES  |     | NULL    |       |
-    | ctapeno   | double | YES  |     | NULL    |       |
-    | deal      | text   | YES  |     | NULL    |       |
-    | fico      | double | YES  |     | NULL    |       |
-    | dti       | double | YES  |     | NULL    |       |
-    | cltv      | double | YES  |     | NULL    |       |
-    | obal      | double | YES  |     | NULL    |       |
-    | orate     | double | YES  |     | NULL    |       |
-    | grade     | text   | YES  |     | NULL    |       |
-    | dtype     | text   | YES  |     | NULL    |       |
-    | fpd       | text   | YES  |     | NULL    |       |
-    | ltype     | text   | YES  |     | NULL    |       |
-    | otype     | text   | YES  |     | NULL    |       |
-    | purpose   | text   | YES  |     | NULL    |       |
-    | ptype     | text   | YES  |     | NULL    |       |
-    | zip       | text   | YES  |     | NULL    |       |
-    | metro     | text   | YES  |     | NULL    |       |
-    | perf      | text   | YES  |     | NULL    |       |
-    +-----------+--------+------+-----+---------+-------+
-    18 rows in set (0.00 sec)
-    
-Between the first two rows (record identifiers) and the last row (the performance category) are the 17 variables we have to predict the performance outcome. For the almost 100,000 records, that is 1.5 million pieces of information. Technically we are in 15-dimensional space, and we need a way of flattening the dimensionality to be able to question the data.
+Do metropolitan areas do a better job?
+
+```{r, results="asis", echo = FALSE, warning=FALSE}
+res <- as.tibble(dbGetQuery(con, "SELECT down, metro FROM y7"))
+res.mod <- glm(down ~ metro, data=res)
+rm(res)
+autoplot(res.mod)
+```
+
+No.
+
+[In preparation, remaining categorical variables for logistic regression]
 
 ## Principal component analysis
 
@@ -161,17 +135,17 @@ Consideration might be given to separately clustering high-balance loans. Other 
 
 ### Housekeeping
 
-Since PCA is a relatively expensive calculation for 100K records, I saved the result to and Rda file for reuse. Now, I'll add it to the loans database as another categorical variable.
+Since PCA is a relatively expensive calculation for 100K records, I saved the result to and Rda file for reuse. Now, I'll add it to the create a new loans database as another categorical variable.
 
 Because I don't run the MySQL server with rollback and to avoid a proliferation of names
 
-    MariaDB [dlf]> CREATE TABLE loans_bak AS SELECT * from loans;
+    MariaDB [dlf]> CREATE TABLE y7k AS SELECT * from y7;
     Query OK, 96147 rows affected (1.06 sec)
     Records: 96147  Duplicates: 0  Warnings: 0
 
 The strategy is to create df loans with all fields and cbind cs.k$clusters, renamed "value" to kcluster and write back to loans.
 
-    dbWriteTable(con, "loans", cs)
+    dbWriteTable(con, "y7k", cs)
 
 Here's the code (not run, to avoid churn)
 
@@ -182,7 +156,7 @@ Here's the code (not run, to avoid churn)
 
     drv <- dbDriver("MySQL")
     con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
-    res <- dbGetQuery(con, "SELECT * from loans_bak")
+    res <- dbGetQuery(con, "SELECT * from y7")
     cs <- as.tibble(res)
     load("data/kmeans_loans.Rda") # brings in cs.k
     #check for missing values
@@ -196,171 +170,15 @@ Here's the code (not run, to avoid churn)
     # remove duplicate rownames column
     loans <- loans[-1]
     # write back to SQL
-    #dbWriteTable(con, "loans", loans) 
+    #dbWriteTable(con, "loans", y7k) 
     # test
     #dbGetQuery(con, "SELECT * from loans limit 25")
 
 ## Do the clusters predict loan performance?
 
-We previously classified loans in the pool based on payment history into three categories:
-
-* A: no more than 1 missed payment during the life of the loan
-* B: more than 1 missed payment during the life of the loan but current in the most recent report
-* C: delinquent at least three times as of the most recent three payment reports
-
-Do the clusters derived from the principal components of the numeric variables, *obal*, *orate*, *dti* and *cltv* have an association with the payment categories?
+Do the clusters derived from the principal components of the numeric variables, *obal*, *orate*, *dti* and *cltv* have an association with the *down* variable of consequtive payments missed?
 
 If they do, we have the makings of a model; otherwise, we need to look at the other data available. 
-
-(Retrospective insight: we know know that the model won't be a regression)
-
-### Correlation analysis
-
-Principal component analysis and many other data tools work only on continuous data; for discrete (or categorical) values, we turn to contingency tables, where one variable is in the rows and the other in the columns, so this is sometimes called an *r x c* table.
-
-I'll use three 10% samples to check if the results are consistent. The idea is to see if the porportion of results are *independent.* In formal terms, that will be the null hypothosis. The test statistic is the chi-square test of independence. I'll use the conventional *p-value* of 0.05 as the cutoff; anything less than that means that I cannot reject the null hypothesis that the performance categories and the factors are independent. Here are the contingency tables:
-
-```{r contab, results="asis", echo = FALSE, warning=FALSE}
-library(tidyverse)
-library(DBI)
-library(RMySQL)
-library(FactoMineR)
-library(knitr)
-library(kableExtra)
-drv <- dbDriver("MySQL")
-con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
-cs <- as.tibble(dbGetQuery(con, "SELECT perf, kcluster from loans"))
-s1 <- cs %>% sample_n(9000,replace=TRUE)
-s2 <- cs %>% sample_n(9000,replace=TRUE)
-s3 <- cs %>% sample_n(9000,replace=TRUE)
-kable(table(s1), format.args = list(big.mark = ","), caption = "Sample 1 contingency table of performance (row) by cluster (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-kable(table(s2), format.args = list(big.mark = ","), caption = "Sample 2 contingency table of performance (row) by cluster (column)")  %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-kable(table(s3), format.args = list(big.mark = ","), caption = "Sample 3 contingency table of performance (row) by cluster (column)")  %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-``` 
-
-and the chi-square tests are variable, depending on the particular sample.
-
-```{r chisq, results="asis", echo = FALSE, warning=FALSE}
-
-print(chisq.test(table(s1)))
-
-print(chisq.test(table(s2)))
-
-print("Sample 3 chi square test for independence")
-print(chisq.test(table(s3)))
-``` 
-
-The chi square tests show that for each of the samples, the pricipal components are independent of performance.
-
-(Retrospective insight: to be done with revised performance metric)
-
-### What do other categorical contingency tables tell us?
-
-One of the available categorical variables is credit *grade* from the [credit disclosure].
-
-```{r gradevperf, results="asis", echo = FALSE, warning=TRUE}
-library(tidyverse)
-library(DBI)
-library(RMySQL)
-drv <- dbDriver("MySQL")
-con <- dbConnect(drv, username="root", password="", dbname ="dlf", host="localhost")
-cs <- as.tibble(dbGetQuery(con, "SELECT grade,perf FROM loans"))
-# WHERE grade = 'A+' OR grade = 'AP'"))
-#(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of credit grade (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-
-``` 
-
-The warning message
-
-    Warning message:
-    In chisq.test(table(s1)) : Chi-squared approximation may be incorrect
-
-can be easy to overlook, but it has an important message: Some of the grades are too few to occupy the *expected value* slots of the chi-squared distribution.
-
-
-We can restrict the selection to only the A- and AP categories easily enough.
-
-```{r gradperf, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT grade, perf FROM loans WHERE grade = 'A+' OR grade = 'AP'"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of credit grades A+ and AP (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-With a *p-value* greater than 0.05, the A- and AP credit grades are not independent of performance. 
-
-Let's try another categorical variabe, which transaction contained each loan, compared to that loan's performance. The "deal" is not independent of performance.
-
-```{r loanbydeal, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT deal,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of deal (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-
-``` 
-
-The initial interest rates are independent of performance.
-
-```{r loanbymargin, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT orate,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of interest rate (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-The first payment date, indicating the time of origination, is not independent
-
-```{r fpd, results="oasis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT fpd,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of first payment date (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-The loan type is independent of performance.
-
-```{r loanbyltype, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT ltype, perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of loan type (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-Occupancy type is independent of performance.
-
-```{r loanbyotype, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT otype,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of occupancy type (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-Loan documentation type is independent of performance..
-
-```{r loanbydtype, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT dtype,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of documentation type (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-Loan purpose (purchase, rate/term refinance/ cash-out refinance) is independent of performance.
-
-```{r loanbypurp, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT purpose,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of loan purpose (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-Property type is not independent of perforannce.
-
-```{r loanbyptype, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT ptype,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of property type (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
-The metropolitan region of the property is independent of performance.
-
-```{r loanbymetro, results="asis", echo = FALSE, warning=FALSE}
-cs <- as.tibble(dbGetQuery(con, "SELECT metro,perf FROM loans"))
-kable(table(cs), format.args = list(big.mark = ","), caption = "Contingency table of metropolitan area (row) by performance (column)") %>% kable_styling(bootstrap_options = "striped", full_width = F) 
-chisq.test(table(cs))
-``` 
-
 
 
 [credit disclosure]: https://goo.gl/uhX1Pc
