--- a/index.Rmd
+++ b/index.Rmd
@@ -32,6 +32,7 @@ Its intent is to provide prospective employers with concrete evidence of my abil
 * 2018-08-14 added PH125.7x: Data Science: Linear Regression certificate
 * 2018-08-15 Stratified suprime data set
 * 2018-09-01 Exhuasted linear regression on subprime loan dataset
+* 2018-09-07 Major revisions to part 1 and part 2 of subprime dataset
 
 ## Literate programming: the tight integration of code and text
 
